// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabsList shapshots should match when empty 1`] = `
<section
  className="tabs-list"
>
  <ul
    className="tabs-list__headers"
    data-testid="tab-toggle-list"
  />
  <ul
    className="tabs-list__content"
    data-testid="tab-content-list"
  />
</section>
`;

exports[`TabsList shapshots should match with data 1`] = `
<section
  className="tabs-list"
>
  <ul
    className="tabs-list__headers"
    data-testid="tab-toggle-list"
  >
    <button
      className="tab-toggle tab-toggle_active"
      onClick={[Function]}
      type="button"
    >
      First tab
    </button>
    <button
      className="tab-toggle "
      onClick={[Function]}
      type="button"
    >
      Second tab
    </button>
    <button
      className="tab-toggle "
      onClick={[Function]}
      type="button"
    >
      Third tab
    </button>
  </ul>
  <ul
    className="tabs-list__content"
    data-testid="tab-content-list"
  >
    <section
      className="tab-content "
    >
      First tab content
    </section>
    <section
      className="tab-content tab-content_hidden"
    >
      Second tab content
    </section>
    <section
      className="tab-content tab-content_hidden"
    >
      Third tab content
    </section>
  </ul>
</section>
`;
